--- a/appTemplate/MapListingViewController.xib
+++ b/appTemplate/MapListingViewController.xib
@@ -16,8 +16,12 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bar.png" id="BzV-Y1-Mp8">
+                    <rect key="frame" x="-320" y="0.0" width="320" height="2"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                </imageView>
                 <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" id="4">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                    <rect key="frame" x="0.0" y="2" width="320" height="566"/>
                     <autoresizingMask key="autoresizingMask"/>
                     <connections>
                         <outlet property="delegate" destination="-1" id="13"/>
@@ -59,4 +63,7 @@
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
         </view>
     </objects>
+    <resources>
+        <image name="bar.png" width="444" height="3"/>
+    </resources>
 </document>
