--- a/appTemplate/DetailedViewController.xib
+++ b/appTemplate/DetailedViewController.xib
@@ -26,20 +26,20 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="bg.png" id="359">
-                    <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="bar.png" id="359">
+                    <rect key="frame" x="0.0" y="62" width="320" height="2"/>
                     <autoresizingMask key="autoresizingMask"/>
                 </imageView>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="EJj-bJ-Dp7">
-                    <rect key="frame" x="-5" y="0.0" width="325" height="568"/>
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <subviews>
                         <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="free.png" id="Jpx-4U-tYl">
-                            <rect key="frame" x="255" y="372" width="50" height="50"/>
+                            <rect key="frame" x="265" y="372" width="45" height="50"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         </imageView>
                         <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Ptx-Bn-3mE">
-                            <rect key="frame" x="20" y="386" width="220" height="21"/>
+                            <rect key="frame" x="24" y="386" width="233" height="21"/>
                             <autoresizingMask key="autoresizingMask"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -76,7 +76,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="t7h-KX-en5">
-                            <rect key="frame" x="270" y="498" width="50" height="50"/>
+                            <rect key="frame" x="275" y="498" width="40" height="40"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <state key="normal" backgroundImage="map.png">
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -86,7 +86,7 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="4Uv-eZ-DCJ">
-                            <rect key="frame" x="270" y="433" width="50" height="50"/>
+                            <rect key="frame" x="275" y="430" width="40" height="40"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <state key="normal" backgroundImage="shopping.png">
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -103,17 +103,13 @@
                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                         </textView>
                         <view contentMode="scaleToFill" id="RB6-hS-aR2">
-                            <rect key="frame" x="5" y="20" width="320" height="548"/>
+                            <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                             <autoresizingMask key="autoresizingMask"/>
                             <subviews>
                                 <view contentMode="scaleToFill" id="QhK-ao-yJg">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="250"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg.png" id="dun-ZB-xYS">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="250"/>
-                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                        </imageView>
                                         <pickerView contentMode="scaleToFill" id="aLX-97-e7C">
                                             <rect key="frame" x="0.0" y="34" width="320" height="216"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
@@ -123,7 +119,7 @@
                                             </connections>
                                         </pickerView>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="oJl-3b-CRb">
-                                            <rect key="frame" x="254" y="14" width="60" height="40"/>
+                                            <rect key="frame" x="285" y="5" width="30" height="30"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <state key="normal" backgroundImage="ok.png">
                                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -133,7 +129,7 @@
                                             </connections>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="unv-Z7-sRX">
-                                            <rect key="frame" x="12" y="14" width="60" height="40"/>
+                                            <rect key="frame" x="5" y="5" width="30" height="30"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <state key="normal" backgroundImage="delete.png">
                                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -142,19 +138,18 @@
                                                 <action selector="cancel:" destination="-1" eventType="touchUpInside" id="uV8-2w-6Cn"/>
                                             </connections>
                                         </button>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="other_bg.png" id="NbO-ry-pcn">
-                                            <rect key="frame" x="80" y="-15" width="160" height="80"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        </imageView>
                                         <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="場次選擇" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Q9q-kp-xbp">
-                                            <rect key="frame" x="95" y="14" width="131" height="22"/>
+                                            <rect key="frame" x="95" y="9" width="131" height="22"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="bar.png" id="tdA-u7-qCl">
+                                            <rect key="frame" x="0.0" y="42" width="320" height="2"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </imageView>
                                     </subviews>
-                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                    <color key="backgroundColor" red="0.93725490196078431" green="0.92156862745098034" blue="0.90980392156862744" alpha="1" colorSpace="calibratedRGB"/>
                                 </view>
                                 <view alpha="0.5" contentMode="scaleToFill" id="Px0-hu-mIw">
                                     <rect key="frame" x="0.0" y="250" width="320" height="298"/>
@@ -166,19 +161,18 @@
                     </subviews>
                 </scrollView>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="0.93725490196078431" green="0.92156862745098034" blue="0.90980392156862744" alpha="1" colorSpace="calibratedRGB"/>
             <gestureRecognizers/>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
         </view>
     </objects>
     <resources>
-        <image name="bg.png" width="444" height="708"/>
-        <image name="delete.png" width="83" height="68"/>
-        <image name="free.png" width="101" height="101"/>
-        <image name="map.png" width="57" height="57"/>
-        <image name="ok.png" width="83" height="68"/>
-        <image name="other_bg.png" width="296" height="133"/>
-        <image name="shopping.png" width="57" height="57"/>
+        <image name="bar.png" width="444" height="3"/>
+        <image name="delete.png" width="28" height="28"/>
+        <image name="free.png" width="90" height="47"/>
+        <image name="map.png" width="42" height="42"/>
+        <image name="ok.png" width="28" height="28"/>
+        <image name="shopping.png" width="42" height="42"/>
     </resources>
 </document>
