--- a/appTemplate/RouteListViewController.xib
+++ b/appTemplate/RouteListViewController.xib
@@ -17,10 +17,19 @@
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+            <color key="separatorColor" red="0.93725490196078431" green="0.92156862745098034" blue="0.90980392156862744" alpha="1" colorSpace="calibratedRGB"/>
+            <color key="sectionIndexTrackingBackgroundColor" red="0.93725490196078431" green="0.92156862745098034" blue="0.90980392156862744" alpha="1" colorSpace="calibratedRGB"/>
+            <imageView key="tableHeaderView" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bar.png" id="Yvy-yR-o4w">
+                <rect key="frame" x="0.0" y="0.0" width="320" height="2"/>
+                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            </imageView>
             <connections>
                 <outlet property="dataSource" destination="-1" id="13"/>
                 <outlet property="delegate" destination="-1" id="14"/>
             </connections>
         </tableView>
     </objects>
+    <resources>
+        <image name="bar.png" width="444" height="3"/>
+    </resources>
 </document>
